[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycausalsim"
version = "0.1.0"
description = "Causal Discovery and Inference Through Simulation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Brian Curry", email = "brian@vector1.ai"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "causal inference",
    "causal discovery", 
    "counterfactual",
    "simulation",
    "machine learning",
    "data science",
    "a/b testing",
    "marketing attribution",
    "uplift modeling",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.10.0",
]
viz = [
    "matplotlib>=3.5.0",
    "networkx>=2.6.0",
    "seaborn>=0.11.0",
]
neural = [
    "torch>=1.10.0",
]
integrations = [
    "dowhy>=0.8",
    "econml>=0.12.0",
]
all = [
    "matplotlib>=3.5.0",
    "networkx>=2.6.0",
    "seaborn>=0.11.0",
    "dowhy>=0.8",
    "econml>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/Bodhi8/pycausalsim"
Documentation = "https://pycausalsim.readthedocs.io"
Repository = "https://github.com/Bodhi8/pycausalsim"
Issues = "https://github.com/Bodhi8/pycausalsim/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["pycausalsim"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
